# workflow-ai

./: BUILD  CMakeLists.txt  README.md  README_cn.md  WORKSPACE
.github/workflows/: bazel.yml
examples/: async_demo.cc  deepseek_chatbot.cc  demo.cc  ollama_client.cc  parallel_tool_call.cc  sync_demo.cc  task_demo.cc  tool_call.cc
src/: chat_request.cc  chat_request.h  chat_response.cc  chat_response.h  llm_client.cc  llm_client.h  llm_function.cc  llm_function.h  llm_memory.cc  llm_memory.h  llm_session.cc  llm_session.h  llm_util.h
